--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -2,6 +2,7 @@ version: 2
 updates:
   - package-ecosystem: "gomod"
     directory: "/"
+    open-pull-requests-limit: 3
     schedule:
       interval: "daily"
     commit-message:
@@ -9,6 +10,7 @@ updates:
 
   - package-ecosystem: "github-actions"
     directory: "/"
+    open-pull-requests-limit: 3
     schedule:
       interval: "daily"
     commit-message:
