--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -11,7 +11,25 @@ permissions:
   contents: read
 
 jobs:
+  sonarqube:
+    name: SonarQube
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          fetch-depth: 0
+
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@a31c9398be7ace6bbfaf30c0bd5d415f843d45e9 # v7.0.0
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=hugolhafner_dskit
+            -Dsonar.organization=hugolhafner
+
   setup:
+    name: Setup and Cache
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
@@ -20,6 +38,7 @@ jobs:
         uses: ./.github/actions/setup
 
   test:
+    name: Test
     needs: [setup]
     runs-on: ubuntu-latest
     steps:
@@ -38,6 +57,7 @@ jobs:
           path: test_results.json
 
   lint:
+    name: Lint
     needs: [setup]
     runs-on: ubuntu-latest
     steps:
@@ -50,7 +70,8 @@ jobs:
         run: make lint
 
   release:
-    needs: [test, lint]
+    name: Release
+    needs: [sonarqube, test, lint]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
